--- a/modularity1.html
+++ b/modularity1.html
@@ -157,13 +157,13 @@
 	    		<p class="instruction-text">The lightbox should display arbitrary content, centered vertically and horizontally, with everything behind it (the rest of the page) darkened. It should obscure the entire screen, no matter where you are on the page. You may want to disable these styles when you're not actively working on them, otherwise they'll cover the whole page.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<div>
+			    	<div class="gray-box">
 			    		<div class="lightbox">
 				    		<div>
 					    		<h3 class="lightbox-title">Hello</h3>
 						    	<p class="lightbox-text">Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears. Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 						    	<div>
-						    		<a href="#">Close</a>
+						    		<a href="#" class="lightbox-button">Close</a>
 						    	</div>
 				    		</div>
 				    	</div>
@@ -178,7 +178,7 @@
 	    		<p class="instruction-text">A media block is a left-floated image with some content beside it. Think Facebook updates.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<img src="http://placehold.it/50">
+			    	<img src="http://placehold.it/50" class="media-block">
 			    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    <!-- End editable area -->
 			    </div>
@@ -187,10 +187,10 @@
 
 		    	<!-- Edit here -->
 					<div class="instruction-answer">
-			    	<div>
+			    	<div class="media-block">
 				    	<img src="http://placehold.it/50">
 				    </div>
-			    	<div>
+			    	<div class="media-text">
 				    	<h2>Cupcake Ipsum</h2>
 				    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    </div>
@@ -201,14 +201,14 @@
 
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<div>
+			    	<div class="media-block">
 				    	<img src="http://placehold.it/50">
 				    </div>
 			    	<div>
 				    	<h2>Cupcake Ipsum</h2>
 				    	<p>Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 
-				    	<div>
+				    	<div class="media-block">
 					    	<img src="http://placehold.it/32">
 					    </div>
 				    	<div>
@@ -216,7 +216,7 @@
 					    	<p>Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
 					    </div>
 
-				    	<div>
+				    	<div class="media-block">
 					    	<img src="http://placehold.it/32">
 					    </div>
 				    	<div>
