Final solutions for all problems ls

--- a/modularity1.html
+++ b/modularity1.html
@@ -204,14 +204,14 @@
 			    	<div class="media-block">
 				    	<img src="http://placehold.it/50">
 				    </div>
-			    	<div>
+			    	<div class="media-text">
 				    	<h2>Cupcake Ipsum</h2>
 				    	<p>Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 
 				    	<div class="media-block">
 					    	<img src="http://placehold.it/32">
 					    </div>
-				    	<div>
+				    	<div class="media-text">
 					    	<h2>I like cupcakes!</h2>
 					    	<p>Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
 					    </div>
@@ -219,7 +219,7 @@
 				    	<div class="media-block">
 					    	<img src="http://placehold.it/32">
 					    </div>
-				    	<div>
+				    	<div class="media-text">
 					    	<h2>I like cupcakes, too!</h2>
 					    	<p>Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
 					    </div>
